BUG: (1/29/09, DN) Library readers replace nameDescriptors of arcs by smart text   descriptor calculated from current Prefs. FIX: Move call of ArcInst.getSmartTextDescriptor to upper constructor which is not called   from library readers.
BUG: (1/29/09, DN) Each instance of Artwork.defaultLayer creates a new Pref object.
FIX: Add method Layer.isFree(). Don't allocate Prefs for free Layers.

IMP: (1/29/09, DN) Some Prefs can be used in server Jobs, other are client only.
    Server Prefs are created by special factory methods during Electric initialization.


git-svn-id: https://svn.java.net/svn/electric~svn/trunk@8725 b64ed6c1-75a8-e629-b1da-d0dae74a743a